[gd_scene load_steps=2 format=3 uid="uid://ceei6115mex87"]

[ext_resource type="Script" path="res://UI/DragPreview/Drag_preview.gd" id="1_d22ji"]

[node name="DragPreview" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_d22ji")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="ItemIcon" type="TextureRect" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="ItemAmount" type="Label" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
horizontal_alignment = 2
